@@ -1,5 +1,10 @@
 2008-05-02  Paolo Borelli  <pborelli@katamail.com>
 
+	* src/baobab-scan.c: pass in the GFileInfo to the recursive loop
+	to avoid to call stat() again on each file.
+
+2008-05-02  Paolo Borelli  <pborelli@katamail.com>
+
 	* src/baobab.c:
 	Ref the location before rescanning otherwise the current location
 	gets finalized. Also make sure the Rescan button is insensitive when
